<resources>
    <string name="app_name" translatable="false">LyraWalletManager</string>
    <string name="charset" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="str_please_contact_lyra_period_inc">If the SWAP is not completed but tokens has been sent,\nPlease contact the team at lyra.live, t.me/lyra_live</string>
    <string name="Amount">Amount</string>
    <string name="Balance">Balance</string>
    <string name="Balances">Balances</string>
    <string name="Contract">Contract:</string>
    <string name="Confirmation_Semicolon">Confirmation:</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Confirmations">Confirmations</string>
    <string name="Send">Send</string>
    <string name="One1">One</string>
    <string name="One_Day">One Day</string>
    <string name="Day">Day</string>
    <string name="Days">Days</string>
    <string name="Deposit">Deposit</string>
    <string name="Withdraw">Withdraw</string>
    <string name="Dex">Dex</string>
    <string name="Send1">Send</string>
    <string name="Send2">Send</string>
    <string name="Send3">Sent</string>
    <string name="Seats">Seats</string>
    <string name="Stake">Stake</string>
    <string name="Some_Confirmation">1 Confirmation</string>
    <string name="From">From</string>
    <string name="Fetch">Fetch</string>
    <string name="Expired">Expired</string>
    <string name="To">To</string>
    <string name="NetworkFee">Network Fee</string>
    <string name="None">None</string>
    <string name="TotalSpent">Total Spent</string>
    <string name="Wallet">Wallet</string>
    <string name="OK">OK</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="More">More</string>
    <string name="Native">native</string>
    <string name="Swap">Swap</string>
    <string name="Staking">Staking</string>
    <string name="Status">Status</string>
    <string name="Pool">Pool</string>
    <string name="Preview">Preview</string>
    <string name="Provider">Provider:</string>
    <string name="Request">Request</string>
    <string name="Restake">Restake</string>
    <string name="Unstake">Unstake</string>
    <string name="Unstaking">Unstaking</string>
    <string name="Receive">Receive</string>
    <string name="Refresh">Refresh</string>
    <string name="History">History</string>
    <string name="Height">Height</string>
    <string name="Direction">Direction</string>
    <string name="Minted_block">Minted block</string>
    <string name="Account_type">Account type</string>
    <string name="Account_name">Account name</string>
    <string name="Amount_to_stake">Your amount to stake</string>
    <string name="Add_new_staking_account">Add new staking account</string>
    <string name="Add_stake">Add stake</string>
    <string name="Adding_stake">Adding stake</string>
    <string name="Preview_add_new_staking_account">Preview add new staking account</string>
    <string name="Confirm_action">Confirm action</string>
    <string name="Creating_staking_account">Creating staking account</string>
    <string name="Days_to_stake">Days to stake</string>
    <string name="Days_to_stake_min_max">Days to stake from 3 to 36500 days</string>
    <string name="Deposit_funds_for">Deposit funds for</string>
    <string name="Error_adding_staking">Error adding staking</string>
    <string name="Finished_to_add_stake">Finished to add stake</string>
    <string name="Name_of_staking_account">Name of staking account</string>
    <string name="Transaction_detail">Transaction detail</string>
    <string name="Request_token">Request token</string>
    <string name="Invalid_request">Invalid request</string>
    <string name="Not_received_yet">Not received yet</string>
    <string name="Minimal_deposit">Minimal deposit:</string>
    <string name="Deposition_fee">Deposition fee:</string>
    <string name="Withdraw_fee">Withdraw fee:</string>
    <string name="Not_fetch">Not fetch</string>
    <string name="Time_stamp">Time stamp</string>
    <string name="Send_account_id">Send account ID</string>
    <string name="Send_hash">Send hash</string>
    <string name="Staking_validity">Staking validity</string>
    <string name="Stake_successfully_add">Stake successfully add</string>
    <string name="Receive_account_id">Receive account ID</string>
    <string name="Receive_hash">Receive hash</string>
    <string name="Remove_stake">Remove staking</string>
    <string name="Amount_transferred">Amount transferred</string>
    <string name="Amounts_in_accounts">Amounts in account</string>
    <string name="Total_balance_usd">Total Balance: </string>
    <string name="Total_balance_usd_zero">Total Balance: $0</string>
    <string name="Total_profit">Total profit</string>
    <string name="Total_staked">Total staked</string>
    <string name="Your_share">Your share</string>
    <string name="Your_share_will_be">Your share will be</string>
    <string name="Staking_account_ID">Staking account ID</string>
    <string name="Stake_more">Stake more</string>
    <string name="Profiting_account_ID">Profiting account ID</string>
    <string name="Expiry_date">Expiry date</string>
    <string name="Unlock_wallet">Unlock wallet</string>
    <string name="Unstake_all">Unstake all</string>
    <string name="Successfully_unstaked">Successfully unstaked</string>
    <string name="Enter_wallet_password">Enter wallet password</string>
    <string name="Valid">Valid</string>
    <string name="Add_a_new_staking_account">Add a new staking account</string>
    <string name="Are_you_sure_you_want_to_remove_stake">Are you sure you want to remove stake?\nIf the current stake is not expired you will be charged with 0.8% of the staked amount due to contract breach.</string>
    <string name="Are_you_sure_you_want_to_restake">Are you sure you want to restake?\nThis will do Unstaking of current staking amount and Stake of that amount back.\nIf the current stake is not expired you will be charged with 0.8% of the staked amount due to contract breach.</string>
    <string name="You_will_add_more_value_to_current_staking">You will add more value to current staking</string>
    <string name="Account_validity">Account validity</string>
    <string name="Share_ratio">Share ratio</string>
    <string name="Select_to_stake_for">Select to stake for</string>
    <string name="You_will_stake_for">You will stake for</string>
    <string name="No_tokens_available">No tokens available</string>
    <string name="To_Your_AddressOn">to your address on</string>
    <string name="Spot_colon" translatable="false">Spot:</string>
    <string name="To_DEX" translatable="false">To DEX</string>
    <string name="DEX_colon" translatable="false">DEX:</string>
    <string name="Tron" translatable="false">Tron</string>
    <string name="zero_lyr" translatable="false">0 LYR</string>
    <string name="zero_usd" translatable="false">0 USD</string>
    <string name="Account_1" translatable="false">Account 1</string>
    <string name="Some_date1" translatable="false">2022/01/27 20:57:23</string>
    <string name="Some_account_validity1" translatable="false">30 Days</string>
    <string name="Some_amount_lyr1" translatable="false">1000 LYR</string>
    <string name="BurningAccountID" translatable="false">L111111…111111</string>
    <string name="Share_ratio_08" translatable="false">80%</string>
    <string name="Share_ratio_04" translatable="false">40%</string>
    <string name="Seats_100" translatable="false">100</string>
    <string name="Some_name" translatable="false">Account1</string>
    <string name="Some_profit" translatable="false">32.10242048</string>
    <string name="Some_staked" translatable="false">1024.20484096</string>
    <string name="Some_qty1" translatable="false">10.00</string>
    <string name="Some_qty2" translatable="false">0.000002</string>
    <string name="Some_ticker1" translatable="false">TRX</string>
    <string name="Some_ticker2" translatable="false">ETH</string>
    <string name="Some_Token1" translatable="false">Tron</string>
    <string name="Some_Token2" translatable="false">Ethereum</string>
    <string name="str_launcher_receive_button">RECEIVE</string>
    <string name="str_launcher_explorer_button">EXPLORER</string>
    <string name="str_launcher_new_account_button">NEW ACCOUNT</string>
    <string name="str_launcher_backup_wallet_button">BACKUP WALLET</string>
    <string name="str_launcher_settings_button">SETTINGS</string>
    <string name="str_launcher_about_us_button">About Us</string>
    <string name="prompt_wallet_name">Wallet name</string>
    <string name="prompt_type_wallet_name">Type wallet name</string>
    <string name="prompt_type_account_name">Type account name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_type_password">Type password</string>
    <string name="prompt_type_wallet_password">Type wallet password</string>
    <string name="prompt_type_account_private_key">Type private key</string>
    <string name="prompt_retype_password">Retype password</string>
    <string name="action_open_wallet_short">Open wallet</string>
    <string name="action_create_new_wallet_short">Create new wallet</string>
    <string name="action_create_new_account_short">Create account</string>
    <string name="action_recover_account_short">Recover account</string>
    <string name="action_new_wallet_short">New wallet</string>
    <string name="action_import_wallet_hint">Wallet name</string>
    <string name="action_import_wallet_short">Import wallet</string>
    <string name="str_wallet_already_exists">Wallet already exists</string>
    <string name="str_minimum_characters_in_name_is">Minimum number of characters in name is</string>
    <string name="str_something_went_wrong_when_importing_wallet">Something went wrong when importing the wallet</string>
    <string name="str_something_went_wrong_when_backup_wallet">Something went wrong when backup the wallet</string>
    <string name="str_an_error_occurred">An error occurred</string>
    <string name="str_spinner_account_select_hint">Select account</string>
    <string name="main_activity_not_enough_tokens_into_account">Not enough tokens into account</string>
    <string name="main_activity_token_not_found_in_current_account">Token not found in current account</string>
    <string name="account_history">Account history</string>
    <string name="account_transaction_time_stamp_copied">Time stamp copied</string>
    <string name="account_transaction_amount_transferred_copied">Amount transferred copied</string>
    <string name="account_transaction_amounts_in_account_copied">Amounts in account copied</string>
    <string name="send_token_select_spinner_description">Select token</string>
    <string name="send_token_recipient_address_hint">Recipient address…</string>
    <string name="send_token_send_next">Next…</string>
    <string name="send_token_available">Available</string>
    <string name="send_successful">Successfully send</string>
    <string name="send_sending">Sending</string>
    <string name="send_removing">Removing</string>
    <string name="receive_account_address">Account address</string>
    <string name="receive_scan_or_copy_address">Scan or copy address</string>
    <string name="receive_scan_address_copied">Address copied</string>
    <string name="swap_token_amount_to_send_hint">Amount sent</string>
    <string name="swap_token_amount_to_receive_hint">Amount receive</string>
    <string name="swap_pool_add_liquidity">Add liquidity</string>
    <string name="swap_pool_remove_share_from_pair">Remove share from pair</string>
    <string name="swap_lyr_internal_price">LYR internal price</string>
    <string name="swap_lyr_external_price">LYR external price</string>
    <string name="swap_token_pair">Token pair</string>
    <string name="swap_estimated_ratio">Estimated ratio</string>
</resources>