<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:tag="new_account_tag"
    tools:context="com.lyrawallet.Ui.FragmentWalletManagement.FragmentNewAccount">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/new_account_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:digits="@string/charset"
        android:hint="@string/prompt_type_account_name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:nextFocusDown="@id/new_account_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/new_account_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_type_wallet_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/new_account_show_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_account_name"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/new_account_show_password"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/fab_normal_cornered_buttom"
        app:backgroundTint="@color/menu_button_icon_tint"
        app:backgroundTintMode="add"
        app:icon="@drawable/ic_visibility_off_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_account_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fab_normal_button"
        android:text="@string/action_create_new_account_short"
        android:visibility="visible"
        app:backgroundTint="@color/menu_button_icon_tint"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_account_password"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/recover_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fab_normal_button"
        android:text="@string/action_recover_account_short"
        android:visibility="visible"
        app:backgroundTint="@color/menu_button_icon_tint"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>